updated admission page

--- a/admission.html
+++ b/admission.html
@@ -72,6 +72,7 @@
         </nav>
 </header>
 
+<!-- Bachelors section  -->
 <div class="container">
     <div class="row">
         <div id="admission-header">
@@ -82,33 +83,33 @@
     </div>
 </div>
 
-<div class="row">                
-    <div class="col-md-3">
-        <div class="card rounded-0">
+<div class="row justify-content-center">                
+    <div class="col-md-2 mb-4">
+        <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
                 <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Софтуерни технологии и дизайн</h5></a></div>
             </div>
             <p class="card-text">Специалността е предимно с приложна насоченост. Тя осигурява базова широкопрофилна подготовка за 
             прилагане на съвременни софтуерни технологии в различни области на човешката дейност чрез задължителните фундаментални 
-            дисциплини, включени в учебния план. Специалността набляга на уменията за изграждане на дизайн на различни видове...</p>
+            дисциплини, включени в учебния план. Специалността набляга на...</p>
             </div>
         </div>
     </div>
-    <div class="col-md-3">
-        <div class="card rounded-0">
+    <div class="col-md-2 mb-4">
+        <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
                 <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Бизнес информационни технологии</h5></a></div>
             </div>
             <p class="card-text">Специалността акцентира върху ефективното използване и прилагане на информатиката и информационните т
                 ехнологии за подпомагане на бизнес операциите и вземането на решения в софтуерното производство, индустрията и 
-                финансите...</p>
+                финансите.  Специалността осигурява базова...</p>
             </div>
         </div>
     </div>
-    <div class="col-md-3">
-        <div class="card rounded-0">
+    <div class="col-md-2 mb-4">
+        <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
                 <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Информатика</h5></a></div>
@@ -119,8 +120,8 @@
             </div>
         </div>
     </div>
-    <div class="col-md-3">
-        <div class="card rounded-0">
+    <div class="col-md-2 mb-4">
+        <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
                 <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Софтуерно инженерство</h5></a></div>
@@ -131,20 +132,21 @@
             </div>
         </div>
     </div>
+    <div class="col-md-2 mb-4">
+        <div class="card rounded-0 card-admission">
+            <div class="card-body">
+            <div class="row">
+                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Математика</h5></a></div>
+            </div>
+            <p class="card-text">Специалността осигурява базова ши­­роко­про­­филна подготовка по математика чрез задължителните фундаментални 
+                дисциплини, вклю­чени в учеб­­ния план, а с избираемите и факултативните дисциплини студентите се подготвят по-задъл­бо­чено в 
+                избрана от тях математическа област, могат да изучават специализирани курсове...</p>
+            </div>
+        </div>
+    </div>
 </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
+<!-- Masters section  -->
 <div class="container">
     <div class="row">
         <div id="admission-header">
@@ -153,8 +155,70 @@
             </h1>
         </div>
     </div>  
-</div> 
+</div>
 
+<div class="row justify-content-center">                
+    <div class="col-md-2 mb-4">
+        <div class="card rounded-0 card-admission">
+            <div class="card-body">
+            <div class="row">
+                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Приложна математика - (2г.)</h5></a></div>
+            </div>
+            <p class="card-text">Специалността е предимно с приложна насоченост. Тя осигурява базова широкопрофилна подготовка за 
+            прилагане на съвременни софтуерни технологии в различни области на човешката дейност чрез задължителните фундаментални 
+            дисциплини, включени в учебния план. Специалността набляга на...</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-2 mb-4">
+        <div class="card rounded-0 card-admission">
+            <div class="card-body">
+            <div class="row">
+                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Обучение по математика в училище - (2г.)</h5></a></div>
+            </div>
+            <p class="card-text">Специалността акцентира върху ефективното използване и прилагане на информатиката и информационните т
+                ехнологии за подпомагане на бизнес операциите и вземането на решения в софтуерното производство, индустрията и 
+                финансите...</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-2 mb-4">
+        <div class="card rounded-0 card-admission">
+            <div class="card-body">
+            <div class="row">
+                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Бизнес информатика с английски език - (2г.)</h5></a></div>
+            </div>
+            <p class="card-text">Специалността си поставя за цел да акцентира не само върху езиците и технологиите за програмиране, 
+                но и да покаже пътища за анализиране и решаване на разнообразни проблеми във областта софтуерното производство, 
+                компютърната графика, изкуствения интелект...</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-2 mb-4">
+        <div class="card rounded-0 card-admission">
+            <div class="card-body">
+            <div class="row">
+                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Софтуерни технологии със специализация графични среди и потребителски интерфейси - (2г.)</h5></a></div>
+            </div>
+            <p class="card-text">Специалността отговаря на тенденциите на развитие и нуждите на софтуерния бизнес и подпомага по-бързата 
+                адаптация и реализация на завършващите специалисти на пазара на труда. Програмата...</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-2 mb-4">
+        <div class="card rounded-0 card-admission">
+            <div class="card-body">
+            <div class="row">
+                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Софтуерни технологии със специализация системи с изкуствен интелект - (2г.)</h5></a></div>
+            </div>
+            <p class="card-text">Специалността осигурява базова ши­­роко­про­­филна подготовка по математика чрез задължителните фундаментални 
+                дисциплини, вклю­чени в учеб­­ния план, а с избираемите и факултативните дисциплини студентите се...</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- More info section  -->
 <div class="container">
     <div class="row">
         <div id="admission-header">
@@ -164,24 +228,68 @@
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-
-
-
+<div class="row justify-content-center">                
+    <div class="col-md-2 mb-4">
+        <div class="card rounded-0 card-admission">
+            <div class="card-body">
+            <div class="row">
+                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Софтуерни технологии и дизайн</h5></a></div>
+            </div>
+            <p class="card-text">Специалността е предимно с приложна насоченост. Тя осигурява базова широкопрофилна подготовка за 
+            прилагане на съвременни софтуерни технологии в различни области на човешката дейност чрез задължителните фундаментални 
+            дисциплини, включени в учебния план. Специалността набляга на...</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-2 mb-4">
+        <div class="card rounded-0 card-admission">
+            <div class="card-body">
+            <div class="row">
+                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Бизнес информационни технологии</h5></a></div>
+            </div>
+            <p class="card-text">Специалността акцентира върху ефективното използване и прилагане на информатиката и информационните т
+                ехнологии за подпомагане на бизнес операциите и вземането на решения в софтуерното производство, индустрията и 
+                финансите.  Специалността осигурява базова...</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-2 mb-4">
+        <div class="card rounded-0 card-admission">
+            <div class="card-body">
+            <div class="row">
+                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Информатика</h5></a></div>
+            </div>
+            <p class="card-text">Специалността си поставя за цел да акцентира не само върху езиците и технологиите за програмиране, 
+                но и да покаже пътища за анализиране и решаване на разнообразни проблеми във областта софтуерното производство, 
+                компютърната графика, изкуствения интелект, мрежи, разпределени приложения, качество и сигурност на софтуера...</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-2 mb-4">
+        <div class="card rounded-0 card-admission">
+            <div class="card-body">
+            <div class="row">
+                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Софтуерно инженерство</h5></a></div>
+            </div>
+            <p class="card-text">Специалността отговаря на тенденциите на развитие и нуждите на софтуерния бизнес и подпомага по-бързата 
+                адаптация и реализация на завършващите специалисти на пазара на труда.Програмата осигурява задълбочена подготовка по 
+                информатика, информационни технологии и софтуерен инженеринг...</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-2 mb-4">
+        <div class="card rounded-0 card-admission">
+            <div class="card-body">
+            <div class="row">
+                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Математика</h5></a></div>
+            </div>
+            <p class="card-text">Специалността осигурява базова ши­­роко­про­­филна подготовка по математика чрез задължителните фундаментални 
+                дисциплини, вклю­чени в учеб­­ния план, а с избираемите и факултативните дисциплини студентите се подготвят по-задъл­бо­чено в 
+                избрана от тях математическа област, могат да изучават специализирани курсове...</p>
+            </div>
+        </div>
+    </div>
+</div>
 
 <footer>
     <div class="text-center p-4">
