--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <div class="container">
 
 
-<div class="container d-flex">
+<div class="container d-flex justify-content-center mt-4">
          <div class="row m-3">
           <div class="col-2" ><img class="news-icon" src="./assets/img/icons/news.png"></div>       
           <div class="col-4 "><h7>Новини</h7></div>
